--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
   output:
     ansi:
       enabled: always # 인텔리제이 커뮤니티에서 콘솔에 색상 출력을 위한 설정
+  datasource:
+    url: jdbc:h2:./db_dev;MODE=PostgreSQL
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
     hibernate:
       ddl-auto: update
