--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+  jackson:
+    serialization:
+      fail-on-empty-beans: false # 빈 객체를 JSON으로 변환할 때 실패하지 않도록 설정, Empty 클래스 때문에 이 설정 추가
   jpa:
     hibernate:
       ddl-auto: update
