--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8080
 spring:
+  profiles:
+    active: dev
   output:
     ansi:
       enabled: always # 인텔리제이 커뮤니티에서 콘솔에 색상 출력을 위한 설정
